@startuml

'-----------------------------------
' UML concepts illustrated
' JMB 2014
'-----------------------------------

'hide circle
hide empty members
hide empty methods


abstract class Personnage {
combattre() {this.arme.utiliserArme();}
setArme(ComportementArme a) {this.arme = a;}
}
class Reine {
}
class Roi {
}
class ComportementPoignard {
}
class ComportementArc {
}
class ComportementEpee {
}
interface ComportementArme{
{abstract} utiliserArme()
}
class Troll {
}
class Chevalier {
}
Personnage <|-- Roi
Personnage <|-- Reine
Personnage <|-- Chevalier
Personnage <|-- Troll
Personnage --> "1" ComportementArme

ComportementArme <|.. ComportementEpee
ComportementArme <|.. ComportementPoignard
ComportementArme <|.. ComportementArc


@enduml
